							   -*- coding: utf-8 -*-
			     BZFlag Release Notes                           
			     ====================


BZFlag 2.99.x
------------
* Fix -configdir on client - Scott Wichser, Steven Mertens
* Server operators no longer automatically override antiban - Daniel Remenak
* New tank explosion pattern - Luke Rewega
* Exposed pauseOnMinimize local variable for iconify pausing - Sean Morrison
* Added a new flag, Cloaked Shot - Alexander Boyd
* Screenshot compression is done in a new thread - Daniel Remenak, randomparticle
* Slot numbers on scoreboard now appear regardless of hideAdmin - Joshua Bodine
* Allow plugins to register custom flag types - Daniel Remenak
* improved French localization - Christophe Henry
* clean up various keypress warnings, add slow motion warning - Sean Morrison
* changed default slow motion key binding from 'a' to 'v' - Sean Morrison
* added the ability to query ping times on the server menu - Phillip Vaxorcist
* wings more realistic now only adding to current velocity - Phillip Vaxorcist
* fixed issues on some SMP Linux systems due to bad timekeeping - biggeruniverse
* fixed bug where players sometimes received duplicate messages - Joshua Bodine
* New font system - Sean Morrison, Jeff Myers
* Fixed framerate jitter-inducing bug on SMP systems - Sean Morrison
* Add -filterAnnounce server option - Bernt Hansen
* framerate independent keyboard turn dampening - Sean Morrison, randomparticle
* Added new bzfs -botsPerIP option to limit bot connections - Sean Morrison
* Updated zlib to version 1.2.3 - Sean Morrison
* Anti-aliased rendering option - Snick
* Added bzfscron plugin to execute commands on time intervals - Daniel Remenak
* Removed original BSD advertising clause from 3rd party code - Sean Morrison
* Polish language filter updates - harry666t
* increased joystick button support to 32 buttons - Markus
* Added a new optional height check - Thomas Stauer
* Added optional delay before the countdown gets resumed - Thomas Stauer